--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
   <body>
     <form action="" method="post">
       Name:<input type="text" name="username" />
+      <div><input type="text" name="password"></div>
       <div>
         <button type="submit">Login button</button>
       </div>
