--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     {{if .}}
-      <div class="error">{{.}}</div>
+    <div class="error">{{.}}</div>
     {{end}}
     <form action="" method="post">
-      Name:<input type="text" name="username" />
-      <div><input type="text" name="password"></div>
+      <div>Name:<input type="text" name="username" /></div>
+      <div>Password:<input type="text" name="password" /></div>
       <div>
         <button type="submit">Login button</button>
       </div>
