--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{{.Title}}</title>
     <link rel="stylesheet" href="./static/index.css" />
   </head>
   <body>
+    <h1>{{.Title}}</h1>
     <form method="post">
       <textarea name="update" id="" cols="30" rows="10"></textarea>
       <div>
         <button type="submit">Post update</button>
       </div>
     </form>
-    {{range .}}
+    {{range .Updates}}
     <div>
       <div>
         <strong>{{.GetUser.GetUsername}} wrote:</strong>
